# LibreDWG-API

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  a.txt  aclocal.m4  cDWG_performance.txt  config.status  configure  cppcheck_libreDWG.txt  doxygen  duplicate.txt  libtool  simian.txt
autom4te.cache/: output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
bindings/: Makefile  Makefile.am  Makefile.in  dwg.i
bindings/python/: Makefile  Makefile.in  libredwg.py
build-aux/: config.guess  config.sub  create-changelog  ltmain.sh  snap.GNUmakefile
devdocumentation/html/: README_8md_source.html  annotated.html  bits_8c.html  bits_8c_source.html  bits_8h.html  bits_8h_source.html  classes.html  classes_8c.html  classes_8c_source.html  classes_8h.html  classes_8h_source.html  common_8c.html  common_8c_source.html  common_8h.html  common_8h_source.html  config_8h_source.html  decode_8c.html  decode_8c_source.html  decode_8h.html  decode_8h_source.html  decode__r13__r15_8c.html  decode__r13__r15_8c_source.html  decode__r13__r15_8h.html  decode__r13__r15_8h_source.html  decode__r2004_8c.html  decode__r2004_8c_source.html  dwg_8c.html  (+302 more)
doc/: LibreDWG.info  LibreDWG.texi  Makefile  Makefile.in  README.md  doxygen  stamp-vti
examples/: Makefile  Makefile.am  Makefile.in  alive.test  dwg_ps.c  get_bmp.c  load_dwg.c  load_dwg.py  rewrite.c  sample.dwg  suffix.c  test.c  testSVG.c
m4/: ax_pkg_swig.m4  ax_python_devel.m4  ax_swig_python.m4  libtool.m4  ltoptions.m4
src/: HEADER.txt  Makefile  Makefile.am  Makefile.am~  Makefile.in  add_object.c~  bits.c  bits.c~  bits.h  bits.h~  classes.c  classes.c~  classes.h  classes.h~  common.c  common.h  common.h~  common_entity_handle_data.spec  compress_decompress.c  compress_decompress.h  config.h  config.h.in  decode.c  decode.c~  decode.h  decode.h~  decode_r13_r15.c  decode_r13_r15.c~  decode_r13_r15.h  decode_r13_r15.h~  decode_r2004.c  decode_r2004.c~  decode_r2004.h  decode_r2004.h~  decode_r2007.c  decode_r2007.c~  decode_r2007.h  dwg.c  dwg.h  dwg.h~  (+39 more)
src/.deps/: bits.Plo  classes.Plo  common.Plo  decode.Plo  decode_r13_r15.Plo  decode_r2004.Plo  decode_r2007.Plo  dwg.Plo  encode.Plo  handle.Plo  header.Plo  object.Plo  print.Plo  resolve_pointers.Plo  section_locate.Plo
test/: test_logging.c
unit-testing/: 3dsolid.c  body.c  common.c  lwpline.c  mline.c  region.c
(+387 files in other folders)
