## Makefile.am
##
## Copyright (C) 2010 Free Software Foundation, Inc.
##
## Makefile.am
##
## Copyright (C) 2010 Free Software Foundation, Inc.
##

## This file is part of LibreDWG.
##
## LibreDWG is free software: you can redistribute it and/or modify it
## under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
##
## LibreDWG is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty
## of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
## See the GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
libredwg_la_SOURCES =         \
	bits.c                \
	classes.c             \
	common.c              \
        compress_decompress.c \
	decode.c              \
        decode_r13_r15.c      \
        decode_r2004.c        \
        decode_r2007.c        \
        dwg.c                 \
	encode.c              \
        handle.c              \
        header.c              \
        object.c              \
        print.c               \
        resolve_pointers.c    \
        section_locate.c

libredwg_la_LDFLAGS = \
	-version-info 0:0:0

include_HEADERS = dwg.h

EXTRA_DIST = \
	dwg.spec                       \
        header_variables.spec          \
        common_entity_handle_data.spec \
	$(include_HEADERS)             \
	common.h                       \
	bits.h                         \
        classes.h                      \
        compress_decompress.h          \
	decode.h                       \
        decode_r13_r15.h               \
        decode_r2004.h                 \
        decode_r2007.h                 \
	encode.h                       \
        handle.h                       \
        header.h                       \
	logging.h                      \
        object.h                       \
        print.h                        \
        resolve_pointers.h             \
        section_locate.h


#check_PROGRAMS = test testsvg

#test_SOURCES = \
#	test.c

#test_LDADD = libredwg.la

#testsvg_SOURCES = \
#	testSVG.c

#testsvg_LDADD = libredwg.la

#testsvg_LDFLAGS = -lm
